Fix global text encoding mojibake across 12 pages

--- a/404.html
+++ b/404.html
@@ -189,10 +189,10 @@
 
 <body>
   <!--
-    PAGE MAP â€” 404.html
-    .error-card â†’ Headline + guidance actions
-      .cta-group â†’ Primary recovery paths back into the site
-    footer     â†’ Secondary call-to-action for collaboration
+    PAGE MAP — 404.html
+    .error-card → Headline + guidance actions
+      .cta-group → Primary recovery paths back into the site
+    footer     → Secondary call-to-action for collaboration
   -->
 
   <!-- CARD: Error summary + suggested destinations -->
