--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
                         </div>
 
                         <div class="subtle-testimonial">
-                            <p class="testimonial-quote">Most organizations don't lack talentâ€”they lack visibility into
+                            <p class="testimonial-quote">Most organizations don't lack talent—they lack visibility into
                                 where capability actually drives impact. <strong>That's where Saurabh Saini stands
                                     out.</strong></p>
                             <div class="testimonial-author">
