--- a/blog.html
+++ b/blog.html
@@ -190,7 +190,7 @@
             </div>
             <div class="article-content">
               <h2>The Authority Gap</h2>
-              <p>Why most teams fail not because of skill, but because decisions sit too highâ€”and how to fix misaligned
+              <p>Why most teams fail not because of skill, but because decisions sit too high—and how to fix misaligned
                 authority.</p>
             </div>
           </a>
