--- a/case-ecosystem.html
+++ b/case-ecosystem.html
@@ -189,7 +189,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">â† Back to Work</a>
+                <a href="portfolio.html" class="back-link">← Back to Work</a>
 
                 <header class="doc-header">
                     <h1>Choosing the Right Microsoft Tool: A Use Case First Guide</h1>
@@ -215,7 +215,7 @@
                     <h2>Overview: Why this matters</h2>
                     <p>
                         This initiative wasn't about learning every Microsoft tool technically. It was about
-                        understanding what problem each tool solves, so the organization knows which one to useâ€”and
+                        understanding what problem each tool solves, so the organization knows which one to use—and
                         when.
                     </p>
                     <p>
@@ -229,7 +229,7 @@
 
                     <h3>Microsoft Lists</h3>
                     <p>
-                        Microsoft Lists is like Excelâ€”but built for shared tracking, visibility, and collaboration. If
+                        Microsoft Lists is like Excel—but built for shared tracking, visibility, and collaboration. If
                         Excel is great for calculations, Lists is great for tracking work, requests, and status.
                     </p>
                     <ul>
@@ -252,7 +252,7 @@
 
                     <h3>Microsoft OneNote</h3>
                     <p>
-                        OneNote is not a document toolâ€”itâ€™s a knowledge and thinking tool. It's the "everything before"
+                        OneNote is not a document tool—it’s a knowledge and thinking tool. It's the "everything before"
                         a final Word document.
                     </p>
                     <ul>
@@ -270,7 +270,7 @@
 
                     <h2>Final Thoughts</h2>
                     <p>
-                        You donâ€™t need to master every technical detail. The real skill is asking: <em>"What operational
+                        You don’t need to master every technical detail. The real skill is asking: <em>"What operational
                             problem am I trying to solve, and which tools fits that specific boundary?"</em> That
                         mindset dramatically reduces administrative friction.
                     </p>
@@ -278,7 +278,7 @@
                     <h2>Leadership Feedback</h2>
                     <div class="subtle-testimonial">
                         <p class="testimonial-quote">He focuses on signal over noise and helps teams turn expertise into
-                            outcomes. That clarity is rareâ€”and it's what drives better decisions and stronger results.
+                            outcomes. That clarity is rare—and it's what drives better decisions and stronger results.
                         </p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
