--- a/case-psych_safety.html
+++ b/case-psych_safety.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychological Safety â€“ Leadership Learning System | Saurabh Saini</title>
+    <title>Psychological Safety – Leadership Learning System | Saurabh Saini</title>
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
@@ -148,7 +148,7 @@
         }
 
         .doc-content li::before {
-            content: "â€¢";
+            content: "•";
             position: absolute;
             left: 0;
             color: var(--accent-primary);
@@ -210,13 +210,13 @@
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://iamsaurabhsaini.com/case-psych_safety.html">
-  <meta property="og:title" content="Psychological Safety â€“ Leadership Learning System | Saurabh Saini">
+  <meta property="og:title" content="Psychological Safety – Leadership Learning System | Saurabh Saini">
   <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
   <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://iamsaurabhsaini.com/case-psych_safety.html">
-  <meta name="twitter:title" content="Psychological Safety â€“ Leadership Learning System | Saurabh Saini">
+  <meta name="twitter:title" content="Psychological Safety – Leadership Learning System | Saurabh Saini">
   <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
   <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
@@ -246,10 +246,10 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">â† Back to Work</a>
+                <a href="portfolio.html" class="back-link">← Back to Work</a>
 
                 <header class="doc-header">
-                    <h1>Psychological Safety â€“ Leadership Learning System</h1>
+                    <h1>Psychological Safety – Leadership Learning System</h1>
                     <p class="doc-subtitle">Designing a scalable leadership learning solution to build psychological
                         safety and improve team communication.</p>
                     <div class="doc-meta">
@@ -278,7 +278,7 @@
 
                     <h2>Business Context</h2>
                     <p>
-                        In high-performing teams, psychological safety is not just an HR metricâ€”it's a critical
+                        In high-performing teams, psychological safety is not just an HR metric—it's a critical
                         operational lever. When team members feel safe to voice concerns, share ideas, and challenge the
                         status quo, execution accelerates and systemic risks are mitigated.
                     </p>
@@ -358,8 +358,8 @@
 
                     <h3>Learning Architecture</h3>
                     <p>
-                        The architecture followed a highly deliberate progressive flow: <strong>Awareness â†’
-                            Understanding â†’ Application</strong>. Instead of front-loading theory, the modules anchored
+                        The architecture followed a highly deliberate progressive flow: <strong>Awareness →
+                            Understanding → Application</strong>. Instead of front-loading theory, the modules anchored
                         concepts in real-world leadership dilemmas, forcing the learner to make choices before receiving
                         the framework.
                     </p>
@@ -461,7 +461,7 @@
                         The result was a highly <strong>scalable, measurable, and leadership-focused</strong>
                         intervention that aligned perfectly with business OKRs. By moving away from static slide decks
                         and into an interactive performance stack, the organization didn't just disseminate
-                        informationâ€”they engineered a measurable shift in how teams operate, communicate, and execute
+                        information—they engineered a measurable shift in how teams operate, communicate, and execute
                         under pressure.
                     </p>
 
