--- a/case-storyline.html
+++ b/case-storyline.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Learning System â€“ Articulate Storyline | Saurabh Saini</title>
+    <title>Interactive Learning System – Articulate Storyline | Saurabh Saini</title>
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
@@ -148,7 +148,7 @@
         }
 
         .doc-content li::before {
-            content: "â€¢";
+            content: "•";
             position: absolute;
             left: 0;
             color: var(--accent-primary);
@@ -210,13 +210,13 @@
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://iamsaurabhsaini.com/case-storyline.html">
-  <meta property="og:title" content="Interactive Learning System â€“ Articulate Storyline | Saurabh Saini">
+  <meta property="og:title" content="Interactive Learning System – Articulate Storyline | Saurabh Saini">
   <meta property="og:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
   <meta property="og:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://iamsaurabhsaini.com/case-storyline.html">
-  <meta name="twitter:title" content="Interactive Learning System â€“ Articulate Storyline | Saurabh Saini">
+  <meta name="twitter:title" content="Interactive Learning System – Articulate Storyline | Saurabh Saini">
   <meta name="twitter:description" content="Saurabh Saini is a Performance Consultant and Instructional Designer specializing in scenario-based learning, risk reduction, and business impact.">
   <meta name="twitter:image" content="https://iamsaurabhsaini.com/assets/images/core/headshot2.png">
 </head>
@@ -246,10 +246,10 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">â† Back to Work</a>
+                <a href="portfolio.html" class="back-link">← Back to Work</a>
 
                 <header class="doc-header">
-                    <h1>Interactive Learning System â€“ Articulate Storyline</h1>
+                    <h1>Interactive Learning System – Articulate Storyline</h1>
                     <p class="doc-subtitle">Designing an interactive, scalable eLearning solution that improves
                         engagement, accessibility, and learner control.</p>
                     <div class="doc-meta">
@@ -477,7 +477,7 @@
 
                     <h2>Reflection</h2>
                     <p>
-                        This case study proves that effective eLearning is never merely a sequence of slidesâ€”itâ€™s a
+                        This case study proves that effective eLearning is never merely a sequence of slides—it’s a
                         carefully engineered system. By bridging high-level learning strategy with exact technical
                         execution, I demonstrated how utilizing variables, custom navigation, and inclusive design can
                         transform a dense policy document into an engaging and empathetic learning experience.
