--- a/insight-decision-point.html
+++ b/insight-decision-point.html
@@ -158,7 +158,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">â† Back to Insights</a>
+                <a href="blog.html" class="back-link">← Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>The Authority Gap</h1>
@@ -188,10 +188,10 @@
                     <br>
                     <p>
                         When authority is misaligned:<br>
-                        â€¢ Execution slows<br>
-                        â€¢ Risk increases (through bottlenecks)<br>
-                        â€¢ Leaders become approval machines<br>
-                        â€¢ High performers disengage
+                        • Execution slows<br>
+                        • Risk increases (through bottlenecks)<br>
+                        • Leaders become approval machines<br>
+                        • High performers disengage
                     </p>
                     <br>
                     <p>
@@ -204,9 +204,9 @@
                     <br>
                     <p>
                         The shift:<br>
-                        Skill development â†’ Decision enablement<br>
-                        Oversight â†’ Guardrails<br>
-                        Escalation â†’ Ownership
+                        Skill development → Decision enablement<br>
+                        Oversight → Guardrails<br>
+                        Escalation → Ownership
                     </p>
                     <br>
                     <p>
