--- a/insight-order-taker.html
+++ b/insight-order-taker.html
@@ -173,7 +173,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">â† Back to Insights</a>
+                <a href="blog.html" class="back-link">← Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>From Order-Taker to Strategic Learning Partner</h1>
@@ -198,7 +198,7 @@
 
                 <div class="doc-content">
                     <p>
-                        This weekâ€™s Articulate challenge focused on something simple but powerful: the language we use
+                        This week’s Articulate challenge focused on something simple but powerful: the language we use
                         with instructional designers.
                     </p>
                     <br>
@@ -208,7 +208,7 @@
                     </p>
                     <br>
                     <p>
-                        Instead of asking for â€œa quick eLearning,â€ what if we started by asking:
+                        Instead of asking for “a quick eLearning,” what if we started by asking:
                     </p>
                     <br>
                     <p><strong>What problem are we solving?</strong></p>
@@ -218,7 +218,7 @@
                     </p>
                     <br>
                     <p>
-                        Hereâ€™s my take on things to sayâ€”and not sayâ€”to instructional designers.
+                        Here’s my take on things to say—and not say—to instructional designers.
                     </p>
                     <br>
                     <p>
