--- a/insight-stop-building.html
+++ b/insight-stop-building.html
@@ -158,7 +158,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">â† Back to Insights</a>
+                <a href="blog.html" class="back-link">← Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>The 4 Layer Modern Learning Analytics</h1>
@@ -194,24 +194,24 @@
                     </p>
                     <br>
                     <p>
-                        Thatâ€™s Layer 1.
+                        That’s Layer 1.
                     </p>
                     <br>
                     <p>
-                        Executives donâ€™t fund activity.<br>
+                        Executives don’t fund activity.<br>
                         They fund impact.
                     </p>
                     <br>
                     <p>
-                        The real question isnâ€™t: â€œDid people complete the training?â€
+                        The real question isn’t: “Did people complete the training?”
                     </p>
                     <br>
                     <p>
-                        Itâ€™s:<br>
-                        â€¢ Did behavior change?<br>
-                        â€¢ Did error rates drop?<br>
-                        â€¢ Did cycle time improve?<br>
-                        â€¢ Did revenue per rep increase?
+                        It’s:<br>
+                        • Did behavior change?<br>
+                        • Did error rates drop?<br>
+                        • Did cycle time improve?<br>
+                        • Did revenue per rep increase?
                     </p>
                     <br>
                     <p>
@@ -220,23 +220,23 @@
                     <br>
                     <p>
                         If your measurement stops at Activity,<br>
-                        youâ€™re tracking effort â€” not performance.
+                        you’re tracking effort — not performance.
                     </p>
                     <br>
                     <p>
-                        And effort doesnâ€™t show up in board meetings.<br>
+                        And effort doesn’t show up in board meetings.<br>
                         Impact does.
                     </p>
                     <br>
                     <p>
                         The maturity shift:<br>
-                        Activity â†’ Capability â†’ Behavior â†’ Business Impact
+                        Activity → Capability → Behavior → Business Impact
                     </p>
                     <br>
                     <p>
                         Most teams never connect the stack.<br>
                         That gap?<br>
-                        Thatâ€™s where credibility is lost.<br>
+                        That’s where credibility is lost.<br>
                         And where strategic L&D becomes performance architecture.
                     </p>
                     <br>
