--- a/portfolio.html
+++ b/portfolio.html
@@ -312,7 +312,7 @@
               </a>
             </div>
             <div class="case-content">
-              <h2>Interactive Learning System â€“ Articulate Storyline</h2>
+              <h2>Interactive Learning System – Articulate Storyline</h2>
               <div class="case-meta">
                 <div class="meta-block">
                   <span>Role</span>
