--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="testimonials-grid">
 
           <div class="testimonial-card clickable-card" onclick="openTestimonialModal('testimonial-1')">
-            <p class="testimonial-quote">Most organizations don't lack talentâ€”they lack visibility into where capability
+            <p class="testimonial-quote">Most organizations don't lack talent—they lack visibility into where capability
               actually drives impact. <strong>That's where Saurabh Saini stands out.</strong></p>
             <div class="testimonial-author">
               <div class="author-avatar">
@@ -134,15 +134,15 @@
                 <p>Vice President @ Ashley Global Retail<br>VP of Operational Excellence</p>
               </div>
             </div>
-            <span class="read-more-link">Read Full Endorsement â†’</span>
+            <span class="read-more-link">Read Full Endorsement →</span>
 
             <!-- Hidden Full Content -->
             <div id="testimonial-1" class="hidden-testimonial-content">
-              <p>Most organizations don't lack talentâ€”they lack visibility into where capability actually drives impact.
+              <p>Most organizations don't lack talent—they lack visibility into where capability actually drives impact.
                 <strong>That's where Saurabh Saini stands out.</strong><br><br>Saurabh has a sharp ability to see how
                 skills translate into execution, where work creates leverage, and what's truly slowing
-                performanceâ€”people, process, or systems. He focuses on signal over noise and helps teams turn expertise
-                into outcomes.<br><br>That clarity is rareâ€”and it's what drives better decisions and stronger results.
+                performance—people, process, or systems. He focuses on signal over noise and helps teams turn expertise
+                into outcomes.<br><br>That clarity is rare—and it's what drives better decisions and stronger results.
               </p>
             </div>
           </div>
@@ -163,7 +163,7 @@
                 <p>Director, People Development<br>Founder of Limitless Thinking</p>
               </div>
             </div>
-            <span class="read-more-link">Read Full Endorsement â†’</span>
+            <span class="read-more-link">Read Full Endorsement →</span>
 
             <!-- Hidden Full Content -->
             <div id="testimonial-2" class="hidden-testimonial-content">
@@ -171,7 +171,7 @@
                 with.<br><br>Over the past year, I've had the opportunity to watch a team member significantly elevate
                 both their mindset and their impact. The shift in self-awareness, openness to feedback, and commitment
                 to continuous learning has translated directly into stronger performance and greater influence within
-                the team.<br><br>What stands out most is the willingness to embrace both accountability and support â€”
+                the team.<br><br>What stands out most is the willingness to embrace both accountability and support —
                 <strong>understanding that high standards and strong leadership can coexist with trust and
                   development.</strong></p>
             </div>
