--- a/insight-self-talk.html
+++ b/insight-self-talk.html
@@ -189,7 +189,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="blog.html" class="back-link">â† Back to Insights</a>
+                <a href="blog.html" class="back-link">← Back to Insights</a>
 
                 <header class="doc-header">
                     <h1>The Power of Self-Talk: A Self-Leadership Skill</h1>
@@ -207,8 +207,8 @@
 
                 <div class="doc-content">
                     <p>
-                        You donâ€™t need a leadership title to practice leadership skills. One of the most impactful
-                        skills Iâ€™ve learned through working in teams and supporting training is self-talkâ€”the internal
+                        You don’t need a leadership title to practice leadership skills. One of the most impactful
+                        skills I’ve learned through working in teams and supporting training is self-talk—the internal
                         dialogue that shapes how we respond to pressure, feedback, and mistakes.
                     </p>
                     <p><strong>Before influencing others, we all influence ourselves.</strong></p>
@@ -219,7 +219,7 @@
                     <p>
                         When deadlines tighten or things go wrong, your inner voice becomes louder. Supportive self-talk
                         helps you pause, think clearly, and respond intentionally. Harsh self-criticism pushes you
-                        toward anxiety and reactive decisions. This applies whether youâ€™re leading a meetingâ€”or simply
+                        toward anxiety and reactive decisions. This applies whether you’re leading a meeting—or simply
                         trying to do your best work.
                     </p>
 
@@ -227,14 +227,14 @@
                     <p>
                         Even though self-talk is internal, its effects show up externally. When your inner dialogue is
                         calm and constructive, you communicate more clearly, listen better, and stay open to feedback.
-                        When itâ€™s critical and rushed, stress spills into conversations. Teams feel thisâ€”even when no
+                        When it’s critical and rushed, stress spills into conversations. Teams feel this—even when no
                         one says it out loud.
                     </p>
 
                     <h3>3. It Influences Burnout and Learning</h3>
                     <p>
                         Constant self-judgment drains energy and motivation. In contrast, self-compassion creates
-                        psychological safetyâ€”the space needed to learn, adapt, and grow over time. This is especially
+                        psychological safety—the space needed to learn, adapt, and grow over time. This is especially
                         important in training and learning environments, where mistakes are an inevitable part of
                         progress.
                     </p>
@@ -243,13 +243,13 @@
 
                     <h3>1. Talk Like a Coach</h3>
                     <p>
-                        Instead of asking <em>â€œWhy am I bad at this?â€</em>, try: <em>â€œWhat can I learn from this
-                            moment?â€</em> This small shift keeps you focused on growth instead of blame.
+                        Instead of asking <em>“Why am I bad at this?”</em>, try: <em>“What can I learn from this
+                            moment?”</em> This small shift keeps you focused on growth instead of blame.
                     </p>
 
                     <h3>2. Speak Like a Supportive Peer</h3>
                     <p>
-                        A simple check: <em>Would I say this to a teammate whoâ€™s learning?</em> If not, itâ€™s worth
+                        A simple check: <em>Would I say this to a teammate who’s learning?</em> If not, it’s worth
                         reframing your internal statement.
                     </p>
 
@@ -265,13 +265,13 @@
                     <h3>4. Practice Self-Leadership First</h3>
                     <p>
                         Before managing tasks or external expectations, manage your internal state. Self-leadership
-                        isnâ€™t about authorityâ€”itâ€™s about responsibility for your mindset, reactions, and evolution.
+                        isn’t about authority—it’s about responsibility for your mindset, reactions, and evolution.
                     </p>
 
                     <h2>Final Reflection</h2>
                     <p>
-                        You donâ€™t need a title to lead yourself well. The quality of your self-talk shapes how you
-                        learn, collaborate, and handle challengesâ€”long before anyone calls you an executive or a leader.
+                        You don’t need a title to lead yourself well. The quality of your self-talk shapes how you
+                        learn, collaborate, and handle challenges—long before anyone calls you an executive or a leader.
                         And that makes it a skill worth practicing.
                     </p>
                 </div>
